[package]
name = "sharey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
reqwest = { version = "0.11.16", features = ["stream", "multipart", "json", "blocking"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
